--- a/days/w2d3/gpt2.ipynb
+++ b/days/w2d3/gpt2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
       "Checking final encodings:\n",
       "Congrats! You've passed the test!\n",
       "Congrats! Your GPT returns the same results with and without cache.\n",
-      "It took 1.473s to generate a 500-token sentence without cache and 1.461s with cache.\n"
+      "It took 2.176s to generate a 500-token sentence without cache and 1.873s with cache.\n"
      ]
     }
    ],
@@ -206,6 +206,7 @@
     "        self._enc = input_ids\n",
     "        if use_cache:\n",
     "            self.cached_encodings = t.cat((self.cached_encodings, self._enc[0]), dim=0)\n",
+    "            # input_ids = self.cached_encodings\n",
     "        input_ids = self.layer_norm(input_ids)\n",
     "        x = input_ids @ self.token_embedding_layer.weight.T\n",
     "        return GPT2Output(x[...,x.shape[-2]-1,:], input_ids[...,input_ids.shape[-2]-1,:])\n",
@@ -236,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +265,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,257 +283,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "GPT2(\n",
-       "  (token_embedding_layer): Embedding(50257, 768)\n",
-       "  (position_embedding_layer): Embedding(1024, 768)\n",
-       "  (dropout): Dropout(p=0.1, inplace=False)\n",
-       "  (layers): Sequential(\n",
-       "    (0): GPT2Block(\n",
-       "      (layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "      (attention): UniMultiAttention(\n",
-       "        (attention): Linear(in_features=768, out_features=2304, bias=True)\n",
-       "        (softmax): Softmax(dim=-1)\n",
-       "        (projection): Linear(in_features=768, out_features=768, bias=True)\n",
-       "      )\n",
-       "      (layers2): Sequential(\n",
-       "        (0): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "        (1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "        (2): GELU()\n",
-       "        (3): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "        (4): Dropout(p=0.1, inplace=False)\n",
-       "      )\n",
-       "    )\n",
-       "    (1): GPT2Block(\n",
-       "      (layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "      (attention): UniMultiAttention(\n",
-       "        (attention): Linear(in_features=768, out_features=2304, bias=True)\n",
-       "        (softmax): Softmax(dim=-1)\n",
-       "        (projection): Linear(in_features=768, out_features=768, bias=True)\n",
-       "      )\n",
-       "      (layers2): Sequential(\n",
-       "        (0): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "        (1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "        (2): GELU()\n",
-       "        (3): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "        (4): Dropout(p=0.1, inplace=False)\n",
-       "      )\n",
-       "    )\n",
-       "    (2): GPT2Block(\n",
-       "      (layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "      (attention): UniMultiAttention(\n",
-       "        (attention): Linear(in_features=768, out_features=2304, bias=True)\n",
-       "        (softmax): Softmax(dim=-1)\n",
-       "        (projection): Linear(in_features=768, out_features=768, bias=True)\n",
-       "      )\n",
-       "      (layers2): Sequential(\n",
-       "        (0): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "        (1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "        (2): GELU()\n",
-       "        (3): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "        (4): Dropout(p=0.1, inplace=False)\n",
-       "      )\n",
-       "    )\n",
-       "    (3): GPT2Block(\n",
-       "      (layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "      (attention): UniMultiAttention(\n",
-       "        (attention): Linear(in_features=768, out_features=2304, bias=True)\n",
-       "        (softmax): Softmax(dim=-1)\n",
-       "        (projection): Linear(in_features=768, out_features=768, bias=True)\n",
-       "      )\n",
-       "      (layers2): Sequential(\n",
-       "        (0): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "        (1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "        (2): GELU()\n",
-       "        (3): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "        (4): Dropout(p=0.1, inplace=False)\n",
-       "      )\n",
-       "    )\n",
-       "    (4): GPT2Block(\n",
-       "      (layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "      (attention): UniMultiAttention(\n",
-       "        (attention): Linear(in_features=768, out_features=2304, bias=True)\n",
-       "        (softmax): Softmax(dim=-1)\n",
-       "        (projection): Linear(in_features=768, out_features=768, bias=True)\n",
-       "      )\n",
-       "      (layers2): Sequential(\n",
-       "        (0): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "        (1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "        (2): GELU()\n",
-       "        (3): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "        (4): Dropout(p=0.1, inplace=False)\n",
-       "      )\n",
-       "    )\n",
-       "    (5): GPT2Block(\n",
-       "      (layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "      (attention): UniMultiAttention(\n",
-       "        (attention): Linear(in_features=768, out_features=2304, bias=True)\n",
-       "        (softmax): Softmax(dim=-1)\n",
-       "        (projection): Linear(in_features=768, out_features=768, bias=True)\n",
-       "      )\n",
-       "      (layers2): Sequential(\n",
-       "        (0): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "        (1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "        (2): GELU()\n",
-       "        (3): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "        (4): Dropout(p=0.1, inplace=False)\n",
-       "      )\n",
-       "    )\n",
-       "    (6): GPT2Block(\n",
-       "      (layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "      (attention): UniMultiAttention(\n",
-       "        (attention): Linear(in_features=768, out_features=2304, bias=True)\n",
-       "        (softmax): Softmax(dim=-1)\n",
-       "        (projection): Linear(in_features=768, out_features=768, bias=True)\n",
-       "      )\n",
-       "      (layers2): Sequential(\n",
-       "        (0): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "        (1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "        (2): GELU()\n",
-       "        (3): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "        (4): Dropout(p=0.1, inplace=False)\n",
-       "      )\n",
-       "    )\n",
-       "    (7): GPT2Block(\n",
-       "      (layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "      (attention): UniMultiAttention(\n",
-       "        (attention): Linear(in_features=768, out_features=2304, bias=True)\n",
-       "        (softmax): Softmax(dim=-1)\n",
-       "        (projection): Linear(in_features=768, out_features=768, bias=True)\n",
-       "      )\n",
-       "      (layers2): Sequential(\n",
-       "        (0): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "        (1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "        (2): GELU()\n",
-       "        (3): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "        (4): Dropout(p=0.1, inplace=False)\n",
-       "      )\n",
-       "    )\n",
-       "    (8): GPT2Block(\n",
-       "      (layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "      (attention): UniMultiAttention(\n",
-       "        (attention): Linear(in_features=768, out_features=2304, bias=True)\n",
-       "        (softmax): Softmax(dim=-1)\n",
-       "        (projection): Linear(in_features=768, out_features=768, bias=True)\n",
-       "      )\n",
-       "      (layers2): Sequential(\n",
-       "        (0): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "        (1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "        (2): GELU()\n",
-       "        (3): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "        (4): Dropout(p=0.1, inplace=False)\n",
-       "      )\n",
-       "    )\n",
-       "    (9): GPT2Block(\n",
-       "      (layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "      (attention): UniMultiAttention(\n",
-       "        (attention): Linear(in_features=768, out_features=2304, bias=True)\n",
-       "        (softmax): Softmax(dim=-1)\n",
-       "        (projection): Linear(in_features=768, out_features=768, bias=True)\n",
-       "      )\n",
-       "      (layers2): Sequential(\n",
-       "        (0): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "        (1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "        (2): GELU()\n",
-       "        (3): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "        (4): Dropout(p=0.1, inplace=False)\n",
-       "      )\n",
-       "    )\n",
-       "    (10): GPT2Block(\n",
-       "      (layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "      (attention): UniMultiAttention(\n",
-       "        (attention): Linear(in_features=768, out_features=2304, bias=True)\n",
-       "        (softmax): Softmax(dim=-1)\n",
-       "        (projection): Linear(in_features=768, out_features=768, bias=True)\n",
-       "      )\n",
-       "      (layers2): Sequential(\n",
-       "        (0): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "        (1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "        (2): GELU()\n",
-       "        (3): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "        (4): Dropout(p=0.1, inplace=False)\n",
-       "      )\n",
-       "    )\n",
-       "    (11): GPT2Block(\n",
-       "      (layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "      (attention): UniMultiAttention(\n",
-       "        (attention): Linear(in_features=768, out_features=2304, bias=True)\n",
-       "        (softmax): Softmax(dim=-1)\n",
-       "        (projection): Linear(in_features=768, out_features=768, bias=True)\n",
-       "      )\n",
-       "      (layers2): Sequential(\n",
-       "        (0): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "        (1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "        (2): GELU()\n",
-       "        (3): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "        (4): Dropout(p=0.1, inplace=False)\n",
-       "      )\n",
-       "    )\n",
-       "  )\n",
-       "  (layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       ")"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
-    "my_gpt.eval()"
+    "my_gpt.eval()\n",
+    "print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'my life motto is: Life is motto.\"\\n\\n\\n\\n\\n\"Life is motto \"life is motto\\n\" lives are motto\\n\"life\\n\" life is motto'"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "my_gpt.generate(\"my life motto is:\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Hello, my name is your name.\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n'"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "my_gpt.generate(\"Hello, my name is\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(my_gpt.generate(\"my life motto is: \", max_length = 60, freq_penalty=50))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello, my name is?\"\\n\\n\\n\\n\\n\"I am the name\\n\"is it?\\n\" is \"the name\\nThe name\\nIs it\\n\"'"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_gpt.generate(\"Hello, my name is \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, I am  a man.\n",
+      "I'm a man.\n",
+      "I am a man. I am a man. I am a man. I am a man. I am a man. I am a man. I am a man. I am a man. I am a man. I am a man\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(my_gpt.generate(\"Hello, I am \", max_length = 60))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, I am  a man.\n",
+      "I'm a woman. And this is the one of course it's not so, and that she was born to be my wife who are both men were all women in her husband as well for me.\"<|endoftext|>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(my_gpt.generate(\"Hello, I am \", max_length = 60, freq_penalty = 20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50256"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.eos_token_id"
+   ]
   },
   {
    "cell_type": "code",
