--- a/days/w2d3/gpt2.ipynb
+++ b/days/w2d3/gpt2.ipynb
@@ -6,6 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import torch as t\n",
     "from typing import *\n",
     "from torch import einsum\n",
@@ -26,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +254,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +436,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,24 +447,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_padded_thing():\n",
+    "def create_padded_thing(tokenizer):\n",
     "    s = 'My life motto: Fortune favors the bold'\n",
     "    ids = tokenizer(s)[\"input_ids\"]\n",
     "    return [ids[:i]+[0]*(10-i) for i in range(4,9)]\n",
     "\n",
-    "test_batch = t.tensor(create_padded_thing())\n",
+    "test_batch = t.tensor(create_padded_thing(tokenizer))\n",
+    "bert_batch = t.tensor(create_padded_thing(transformers.AutoTokenizer.from_pretrained(\"bert-base-cased\")))\n",
     "\n",
-    "def decode_batch(batch):\n",
+    "def decode_batch(batch, tokenizer):\n",
     "    print([tokenizer.decode(batch[i]) for i in range(len(batch))])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +527,7 @@
        "         [ 0.0736, -0.2989]]], grad_fn=<SliceBackward0>)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,6 +536,297 @@
     "my_gpt_modified.eval()\n",
     "my_gpt_modified(test_batch);\n",
     "my_gpt_modified.encoding[:,:,:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_bert = bert_sol.Bert(\n",
+    "    vocab_size=28996, hidden_size=768, max_position_embeddings=512, \n",
+    "    type_vocab_size=2, dropout=0.1, intermediate_size=3072, \n",
+    "    num_heads=12, num_layers=12\n",
+    ")\n",
+    "my_bert.eval()\n",
+    "my_bert(bert_batch);\n",
+    "my_bert._enc[:,:,:2];"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fast GPT2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FastMultiHeadedAttention(Module):\n",
+    "    def __init__(self, hidden_size, num_heads):\n",
+    "        super().__init__()\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.num_heads = num_heads\n",
+    "        self.head_size = hidden_size/num_heads\n",
+    "        self.attn_lin = nn.Linear(hidden_size, hidden_size*3)\n",
+    "        self.out_lin = nn.Linear(hidden_size, hidden_size)\n",
+    "    \n",
+    "    def forward(self, x, past_key_values=None, return_key_values=False):\n",
+    "        product = self.attn_lin(x)\n",
+    "        seq_len = x.shape[1]\n",
+    "        good_format = rearrange(product, 'b n (qkv h p) -> qkv b h n p', qkv = 3, h = self.num_heads)\n",
+    "        queries, keys, values = good_format[0], good_format[1], good_format[2]\n",
+    "\n",
+    "        if past_key_values != None:\n",
+    "            # x has shape [b=1, n=1, hidden_size]\n",
+    "            past_keys, past_values = t.split(past_key_values, past_key_values.shape[-1]//2, dim=-1)\n",
+    "            keys = t.cat((t.unsqueeze(past_keys, dim=0), keys), dim=2)\n",
+    "            values = t.cat((t.unsqueeze(past_values, dim = 0), values), dim=2)            \n",
+    "        \n",
+    "        attn_score = t.einsum('bhfp,bhtp -> bhft', keys, queries) / sqrt(self.head_size)\n",
+    "        \n",
+    "        if past_key_values is None:\n",
+    "            arange = t.arange(seq_len, device=x.device)\n",
+    "            arange_rows = repeat(arange, 'a -> b a', b = seq_len)\n",
+    "            arange_cols = repeat(arange, 'a -> a b', b = seq_len)\n",
+    "            attn_score[:,:,arange_rows < arange_cols] = -1e4\n",
+    "        \n",
+    "        attn_pattn = t.softmax(attn_score, dim=-2)\n",
+    "        # attn_pattn: b h n n; values: b h n p\n",
+    "        out_by_head = t.einsum('bhft,bhfp->bhtp', attn_pattn, values)\n",
+    "        out = rearrange(out_by_head, 'b h t p -> b t (h p)') # b n hidden_size\n",
+    "\n",
+    "        encoding = self.out_lin(out)\n",
+    "        if return_key_values:\n",
+    "            if past_key_values is None:\n",
+    "                return encoding, t.cat((keys, values), dim=-1)\n",
+    "            return encoding, t.cat((keys[:,:,-1:], values[:,:,-1:]), dim=-1)\n",
+    "        return encoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking encoding:\n",
+      "Congrats! You've passed the test!\n",
+      "Checking new key and value:\n",
+      "Congrats! You've passed the test!\n"
+     ]
+    }
+   ],
+   "source": [
+    "gpt_tests.test_attn_cache(FastMultiHeadedAttention)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FastGPT2Block(Module):\n",
+    "    def __init__(self, hidden_size, num_heads, dropout, layer_norm_epsilon):\n",
+    "        super().__init__()\n",
+    "        self.ln1 = nn.LayerNorm(hidden_size, eps=layer_norm_epsilon)\n",
+    "        self.attn = FastMultiHeadedAttention(hidden_size, num_heads)\n",
+    "        self.ln2 = nn.LayerNorm(hidden_size, eps=layer_norm_epsilon)\n",
+    "        self.mlp = nn.Sequential(\n",
+    "            nn.Linear(hidden_size, hidden_size*4),\n",
+    "            nn.GELU(),\n",
+    "            nn.Linear(hidden_size*4, hidden_size))\n",
+    "        \n",
+    "    def forward(self, x, past_key_values=None, return_key_values=False):\n",
+    "        x1 = self.ln1(x)\n",
+    "        x2 = self.attn(x1, past_key_values, return_key_values)\n",
+    "        if return_key_values:\n",
+    "            x3 = x2[0] + x\n",
+    "        else:\n",
+    "            x3 = x2 + x\n",
+    "        x4 = self.ln2(x3)\n",
+    "        if return_key_values:\n",
+    "            return self.mlp(x4) + x3, x2[1]\n",
+    "        return self.mlp(x4) + x3\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataclasses import dataclass\n",
+    "from torchtyping import TensorType\n",
+    "import numpy as np\n",
+    "import transformers\n",
+    "\n",
+    "\n",
+    "@dataclass\n",
+    "class GPT2Output:\n",
+    "    logits: TensorType[\"batch_size\", \"vocab_size\"]\n",
+    "    final_encoding: TensorType[\"batch_size\", \"hidden_size\"]\n",
+    "\n",
+    "    \n",
+    "class FastGPT2(Module):\n",
+    "    def __init__(self, num_layers, num_heads, vocab_size, hidden_size,\n",
+    "                 max_position_embeddings, dropout, layer_norm_epsilon, use_cache=False):\n",
+    "        super().__init__()\n",
+    "        self.num_layers = num_layers\n",
+    "        self.num_heads = num_heads\n",
+    "        self.use_cache = use_cache\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.vocab_size = vocab_size\n",
+    "        self.token_embedding = nn.Parameter(t.randn(vocab_size, hidden_size))\n",
+    "        self.pos_embedding = nn.Parameter(t.randn(max_position_embeddings, hidden_size))\n",
+    "        self.clear_cache()\n",
+    "        \n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        \n",
+    "        self.blocks = nn.ModuleList(\n",
+    "            [FastGPT2Block(hidden_size, num_heads, dropout, layer_norm_epsilon)\n",
+    "              for _ in range(num_layers)]\n",
+    "        )\n",
+    "\n",
+    "        self.layernorm = nn.LayerNorm(hidden_size, eps=layer_norm_epsilon)\n",
+    "\n",
+    "        self.tokenizer = transformers.GPT2Tokenizer.from_pretrained('gpt2')\n",
+    "        \n",
+    "    def clear_cache(self):\n",
+    "        self.cache = t.zeros(self.num_layers, self.num_heads, 0, 2*self.hidden_size//self.num_heads)\n",
+    "        \n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        pre_seq_len = x.shape[-2]\n",
+    "\n",
+    "        if self.cache.shape[-2] != 0:\n",
+    "            x = x[:,-1:]\n",
+    "            pos_embedding = self.pos_embedding[pre_seq_len-1:pre_seq_len]\n",
+    "        else:\n",
+    "            pos_embedding = self.pos_embedding[:pre_seq_len]\n",
+    "\n",
+    "        seq_len = x.shape[-2]\n",
+    "        \n",
+    "        encoding = self.token_embedding[x] + pos_embedding\n",
+    "        encoding = self.dropout(encoding)\n",
+    "\n",
+    "        if self.use_cache:\n",
+    "            if self.cache.size() == 0:\n",
+    "                new_cache = t.zeros(self.num_layers, self.num_heads, seq_len, 2*self.hidden_size//self.num_heads)\n",
+    "                for i,block in enumerate(self.blocks):\n",
+    "                    encoding, new_cache[i] = block(encoding, past_key_values=None, return_key_values=True)\n",
+    "            else:\n",
+    "                new_cache = t.zeros(self.num_layers, self.num_heads, 1, 2*self.hidden_size//self.num_heads)\n",
+    "                for i,block in enumerate(self.blocks):\n",
+    "                    encoding, new_cache[i] = block(encoding, past_key_values=self.cache[i], return_key_values=True)\n",
+    "            self.cache = t.cat((self.cache, new_cache), dim=-2) #wip\n",
+    "        else:\n",
+    "            for i,block in enumerate(self.blocks):\n",
+    "                encoding = block(encoding)\n",
+    "\n",
+    "        final_encoding = self.layernorm(encoding)[:,-1]\n",
+    "        \n",
+    "        logits = t.einsum('vc,bc->bv', self.token_embedding, final_encoding)\n",
+    "        \n",
+    "        return GPT2Output(logits=logits, final_encoding=final_encoding)\n",
+    "    \n",
+    "    def next_token(self, input_ids, temperature, freq_penalty=2.0):\n",
+    "        logits = self.forward(t.tensor(input_ids).reshape(1,len(input_ids))).logits\n",
+    "\n",
+    "        freqs = t.zeros(self.vocab_size)\n",
+    "        for i in input_ids:\n",
+    "            freqs[i] += 1\n",
+    "\n",
+    "        probs = t.softmax(logits/temperature - freqs*freq_penalty, dim=1)\n",
+    "        return np.random.choice(probs.flatten().shape[0], p=probs.flatten().detach().numpy())\n",
+    "\n",
+    "    def generate(self, text, max_length=30, temperature=1.0, freq_penalty=2.0):\n",
+    "        ids = self.tokenizer(text)['input_ids']\n",
+    "        self.clear_cache()\n",
+    "        while len(ids) < max_length:\n",
+    "            new_token = self.next_token(ids, temperature, freq_penalty)\n",
+    "            ids.append(new_token[0])\n",
+    "        print(self.tokenizer.decode(ids))\n",
+    "        return ids\n",
+    "        \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_gpt = FastGPT2(num_layers=12, num_heads=12, vocab_size=50257, hidden_size=768,\n",
+    "                 max_position_embeddings=1024, dropout=0.1, layer_norm_epsilon=1e-5, use_cache=False)\n",
+    "# pretrained_gpt = gpt_tests.get_pretrained_gpt()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def string_replace(s):\n",
+    "    s = s.replace(\"embedding.weight\", \"embedding\")\n",
+    "    s = s.replace(\"linear1\", \"mlp.0\")\n",
+    "    s = s.replace(\"linear2\", \"mlp.2\")\n",
+    "    s = s.replace(\"ln.\", \"layernorm.\")\n",
+    "    return s\n",
+    "\n",
+    "their_dict = pretrained_gpt.state_dict()\n",
+    "for k in list(their_dict.keys()):\n",
+    "    their_dict[string_replace(k)] = their_dict.pop(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_gpt.load_state_dict(their_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After a long day’s work, I like to end\n",
+      "A); when part to police Emperor riding dance the spilled Report H to. he\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_gpt.generate('After a long day’s work, I like to', freq_penalty=0);"
    ]
   },
   {
